Closed Bug 460210 Opened 16 years ago Closed 16 years ago

Various frames should call GetMatrixPropagation() instead of using mPropagateTransform

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: craig.topper, Assigned: longsonr)

Details

Attachments

(1 file, 1 obsolete file)

User-Agent:       Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b2pre) Gecko/20081012 Minefield/3.1b2pre
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b2pre) Gecko/20081012 Minefield/3.1b2pre

nsSVGUseFrame inherits from nsSVGGFrame. nsSVGGFrame contains a field called mPropagateTransform, but never uses it. The place in nsSVGGFrame where it used to be used now calls GetMatrixPropagation().

Unfortunately nsSVGUseFrame is still using mPropagateTransform which it inheritted from nsSVGGFrame. There are no methods in nsSVGGFrame or nsSVGUseFrame to change this field. This field should be removed from nsSVGGFrame. nsSVGUseFrame should then call the GetMatrixPropagation it inherits.

I don't know enough about SVG to know what this would break. I found it by inspection of the code.

Reproducible: Always

Steps to Reproduce:
1.
2.
3.
Attached patch Patch to do what the bugs says (obsolete) — Splinter Review
Attachment #343356 - Flags: review?(roc)
Attached patch patchSplinter Review
There are more problems than in the original patch. Most of this patch was originally in bug 459512.
Assignee: nobody → longsonr
Attachment #343356 - Attachment is obsolete: true
Attachment #343359 - Flags: superreview?(roc)
Attachment #343359 - Flags: review?(roc)
Attachment #343356 - Flags: review?(roc)
Assignee: longsonr → nobody
Status: UNCONFIRMED → NEW
Component: General → SVG
Ever confirmed: true
Product: Firefox → Core
QA Contact: general → general
Summary: nsSVGUseFrame should call GetMatrixPropagation() instead of using mPropagateTransform → Various frames should call GetMatrixPropagation() instead of using mPropagateTransform
Thanks for raising the bug Craig. There was nothing wrong with what you did except that other classes have the same problem and I already had a patch to fix them all in a bug that's now being used for something else.
Attachment #343359 - Flags: superreview?(roc)
Attachment #343359 - Flags: superreview+
Attachment #343359 - Flags: review?(roc)
Attachment #343359 - Flags: review+
Assignee: nobody → longsonr
checked in 8554e41d2b04
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: