layout/svg/base/src/nsSVGForeignObjectFrame.h
@@ -169,7 +169,6 @@ protected:
   // Damage area due to cross-doc invalidation
   nsRegion mCrossDocDirtyRegion;
 
-  PRPackedBool mPropagateTransform;
   PRPackedBool mInReflow;
 };
 
