layout/svg/base/src/nsSVGUseFrame.cpp
@@ -153,7 +153,7 @@ nsSVGUseFrame::Destroy()
 already_AddRefed<nsIDOMSVGMatrix>
 nsSVGUseFrame::GetCanvasTM()
 {
-  if (!mPropagateTransform) {
+  if (!GetMatrixPropagation()) {
     nsIDOMSVGMatrix *retval;
     if (mOverrideCTM) {
       retval = mOverrideCTM;
